--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CP1-WEB/DEV</title>
     <h1>Início do programa.</h1>
-    <script src="JS.js"></script>
+    <h1><script src="JS.js"></script></h1>
 </head>
 <body>
-    
+    <style>
+        body{background-color:blue;}
+        h1{
+            color:aliceblue;
+        }
+   </style> 
 </body>
 </html>
